# neural-net

./: .gitignore  CMakeLists.txt  Makefile  SDLnet.h  functions.h  genetic.h  main.cpp  net.h  neural-net.cpp  neural-net.py  neural-net.sln  neural-net.vcxproj  neural-net.vcxproj.filters  pch.h  simulation.h
Debug/: neural-net.ilk  neural-net.pch  vc141.idb
Debug/neural-net.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  neural-net.lastbuildstate
cpp/: SDLnet.h  functions.h  genetic.h  main.cpp  net.h  simulation.h
src/gq/emiliodallatorre/neuralnet/: Genetic.java  Main.java  SDLNet.java
src/gq/emiliodallatorre/neuralnet/cppimplementations/: Pair.java
